--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,11 @@
                 <p style="color: green;"> {{message}} </p>
             {% endif %}
 
-            <form>
-                <label> Email </label> <br> 
-                <input type="email"> <br>
+            <form action="/perform_login" method="post">
+                <label> Email </label > <br> 
+                <input type="email" name="user_email"> <br>
                 <label> Password </label> <br>
-                <input type="password"> <br> <br>
+                <input type="password" name= user_password> <br> <br>
                 <input type="submit" value="Login">
             </form>
 
